--- a/stable/embed.ipynb
+++ b/stable/embed.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# This didn't finish. Need to redo/complete"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +11,8 @@
     "import json\n",
     "from openai import OpenAI\n",
     "import os \n",
+    "import numpy as np\n",
+    "import base64\n",
     "\n",
     "def embed_chunk(df, i, client, window):\n",
     "    window = df.iloc[i : i + window]\n",
@@ -25,7 +20,7 @@
     "\n",
     "    try:\n",
     "        result = client.embeddings.create(\n",
-    "            input=window['text'].values.tolist(),\n",
+    "            input=window['clean_text'].values.tolist(),\n",
     "            model=\"text-embedding-3-small\"\n",
     "        )\n",
     "    except Exception as e:\n",
@@ -36,7 +31,15 @@
     "        ]\n",
     "\n",
     "    return [\n",
-    "        {'id': ids[i], 'embedding': x.embedding} \n",
+    "        {\n",
+    "            'id': ids[i], \n",
+    "            'embedding': base64.b64encode(\n",
+    "                np.array(\n",
+    "                    x.embedding\n",
+    "                ).tobytes()\n",
+    "            ).decode('utf-8'), \n",
+    "            'model': \"text-embedding-3-small\"\n",
+    "        } \n",
     "        for i, x in enumerate(result.data)\n",
     "    ]\n",
     "    \n",
@@ -55,7 +58,7 @@
     "\n",
     "    del(df)\n",
     "\n",
-    "    with open('data/embeddings.jsonl', 'a', encoding='utf-8') as file:\n",
+    "    with open('data/embeddings2.jsonl', 'a', encoding='utf-8') as file:\n",
     "        for row in embeddings:\n",
     "            file.write(json.dumps(row) + '\\n')\n",
     "\n",
@@ -64,18 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_dotenv()\n",
-    "\n",
-    "client = OpenAI(api_key=os.environ.get(\"API_KEY\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +88,7 @@
       "Processed buffer #12\n",
       "Processed buffer #13\n",
       "Processed buffer #14\n",
+      "Error code: 400 - {'error': {'message': \"This model's maximum context length is 8192 tokens, however you requested 64390 tokens (64390 in your prompt; 0 for the completion). Please reduce your prompt; or completion length.\", 'type': 'invalid_request_error', 'param': None, 'code': None}}\n",
       "Processed buffer #15\n",
       "Processed buffer #16\n",
       "Processed buffer #17\n",
@@ -103,6 +96,7 @@
       "Processed buffer #19\n",
       "Processed buffer #20\n",
       "Processed buffer #21\n",
+      "Error code: 400 - {'error': {'message': \"This model's maximum context length is 8192 tokens, however you requested 18014 tokens (18014 in your prompt; 0 for the completion). Please reduce your prompt; or completion length.\", 'type': 'invalid_request_error', 'param': None, 'code': None}}\n",
       "Processed buffer #22\n",
       "Processed buffer #23\n",
       "Processed buffer #24\n",
@@ -131,86 +125,52 @@
       "Processed buffer #47\n",
       "Processed buffer #48\n",
       "Processed buffer #49\n",
-      "Error code: 400 - {'error': {'message': \"This model's maximum context length is 8192 tokens, however you requested 9158 tokens (9158 in your prompt; 0 for the completion). Please reduce your prompt; or completion length.\", 'type': 'invalid_request_error', 'param': None, 'code': None}}\n",
       "Processed buffer #50\n",
       "Processed buffer #51\n",
       "Processed buffer #52\n",
       "Processed buffer #53\n",
       "Processed buffer #54\n",
       "Processed buffer #55\n",
-      "Processed buffer #56\n",
-      "Processed buffer #57\n",
-      "Processed buffer #58\n",
-      "Processed buffer #59\n",
-      "Processed buffer #60\n",
-      "Processed buffer #61\n",
-      "Processed buffer #62\n",
-      "Processed buffer #63\n"
+      "Processed buffer #56\n"
      ]
     }
    ],
    "source": [
-    "TOKEN_LIMIT = 50\n",
     "BUFFER_SIZE = 10000\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "client = OpenAI(api_key=os.environ.get(\"API_KEY\"))\n",
     "\n",
     "i = 0\n",
     "\n",
-    "with open('../transformed/data/selected_articles.jsonl', 'r', encoding='utf-8') as file:\n",
+    "with open('data/cleaned.jsonl', 'r', encoding='utf-8') as file:\n",
     "    buffer = []\n",
     "    for line in file:\n",
-    "        j = json.loads(line)\n",
-    "        buffer.append({\n",
-    "            'id': j['id'],\n",
-    "            'text': ' '.join(j['text'].split()[: TOKEN_LIMIT])\n",
-    "        })\n",
+    "        buffer.append(json.loads(line))\n",
     "        if len(buffer) >= BUFFER_SIZE:\n",
     "            buffer = pd.DataFrame(buffer)\n",
     "            i += 1\n",
     "            print(f\"Processed buffer #{i}\")\n",
     "            embed_df(buffer, client)\n",
-    "            buffer = []\n"
+    "            buffer = []\n",
+    "\n",
+    "if len(buffer) >= 0:\n",
+    "    buffer = pd.DataFrame(buffer)\n",
+    "    i += 1\n",
+    "    print(f\"Processed buffer #{i}\")\n",
+    "    embed_df(buffer, client)\n",
+    "    buffer = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'id'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n\u001b[0;32m     11\u001b[0m     j \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(line)\n\u001b[0;32m     12\u001b[0m     buffer\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m---> 13\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m: j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbody\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msplit()[: TOKEN_LIMIT])\n\u001b[0;32m     15\u001b[0m     })\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(buffer) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m BUFFER_SIZE:\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'id'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
-    "TOKEN_LIMIT = 100\n",
-    "BUFFER_SIZE = 10000\n",
-    "\n",
-    "i = 0\n",
-    "\n",
-    "with open('../transformed/data/post_filter_scrape.jsonl', 'r', encoding='utf-8') as file:\n",
-    "    buffer = []\n",
-    "    for line in file:\n",
-    "        j = json.loads(line)\n",
-    "        buffer.append({\n",
-    "            'id': j['id'],\n",
-    "            'text': ' '.join(j['body'].split()[: TOKEN_LIMIT])\n",
-    "        })\n",
-    "        if len(buffer) >= BUFFER_SIZE:\n",
-    "            break\n",
-    "            # buffer = pd.DataFrame(buffer)\n",
-    "            # i += 1\n",
-    "            # print(f\"Processed buffer #{i}\")\n",
-    "            # embed_df(buffer, client)\n",
-    "            # buffer = []\n"
+    "# Decode:\n",
+    "# np.frombuffer(base64.b64decode(j['embedding']))\n"
    ]
   }
  ],
