--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,10 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1792823903846.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy.linalg import norm\n",
+    "\n",
+    "a = np.array([0, 1, 2, -1, 124])\n",
+    "b = np.array([1, 0, 2, -2, 1792823903970])\n",
+    "\n",
+    "sum = 0\n",
+    "for i in range(len(a)):\n",
+    "    sum += (float(a[i]) - float(b[i])) ** 2\n",
+    "\n",
+    "sum ** .5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1792823903846.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm(a - b)"
+   ]
   },
   {
    "cell_type": "code",
