--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -11,53 +11,69 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n",
+      "Writing buffer.\n"
+     ]
+    }
+   ],
    "source": [
-    "# import json\n",
-    "# import sqlite3\n",
-    "# import numpy as np\n",
+    "import json\n",
+    "import sqlite3\n",
+    "import numpy as np\n",
+    "import base64 \n",
     "\n",
-    "# conn = sqlite3.Connection('data/data.db')\n",
-    "# cur = conn.cursor()\n",
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
     "\n",
-    "# create_embeddings = \"\"\"\n",
-    "#     CREATE TABLE embeddings (\n",
-    "#         id INTEGER PRIMARY KEY,         \n",
-    "#         vector BLOB              \n",
-    "#     );\n",
-    "# \"\"\"\n",
-    "# cur.execute(create_embeddings)\n",
-    "# conn.commit()\n",
+    "create_embeddings = \"\"\"\n",
+    "    CREATE TABLE embeddings (\n",
+    "        id INTEGER PRIMARY KEY,         \n",
+    "        vector BLOB              \n",
+    "    );\n",
+    "\"\"\"\n",
+    "cur.execute(create_embeddings)\n",
+    "conn.commit()\n",
     "\n",
-    "# insert_embeddings = \"\"\"\n",
-    "#     INSERT INTO embeddings (id, vector) VALUES (?, ?);\n",
-    "# \"\"\"\n",
+    "insert_embeddings = \"\"\"\n",
+    "    INSERT INTO embeddings (id, vector) VALUES (?, ?);\n",
+    "\"\"\"\n",
     "\n",
-    "# buffer = []\n",
-    "# with open('data/embeddings.jsonl', 'rt') as file:\n",
-    "#     for line in file:\n",
-    "#         j = json.loads(line)\n",
-    "#         buffer.append((\n",
-    "#             j['id'], \n",
-    "#             np.array(j['embedding']).tobytes()\n",
-    "#         ))\n",
-    "#         if len(buffer) > 100000:\n",
-    "#             print(\"Writing buffer.\")\n",
-    "#             cur.executemany(\n",
-    "#                 insert_embeddings, \n",
-    "#                 buffer\n",
-    "#             )\n",
-    "#             conn.commit()\n",
-    "#             buffer = []\n",
+    "buffer = []\n",
+    "with open('data/embeddings.jsonl', 'rt') as file:\n",
+    "    for line in file:\n",
+    "        j = json.loads(line)\n",
+    "        if not j['embedding']:\n",
+    "            j['embedding'] = ''\n",
+    "        buffer.append((\n",
+    "            j['id'], \n",
+    "            np.frombuffer(base64.b64decode(j['embedding'])).tobytes()\n",
+    "        ))\n",
+    "        if len(buffer) > 100000:\n",
+    "            print(\"Writing buffer.\")\n",
+    "            cur.executemany(\n",
+    "                insert_embeddings, \n",
+    "                buffer\n",
+    "            )\n",
+    "            conn.commit()\n",
+    "            buffer = []\n",
     "\n",
-    "# if len(buffer) > 0:\n",
-    "#     print(\"Writing buffer.\")        \n",
-    "#     cur.executemany(\n",
-    "#         insert_embeddings, \n",
-    "#         buffer\n",
-    "#     )\n",
-    "#     conn.commit()\n",
-    "#     buffer = []"
+    "if len(buffer) > 0:\n",
+    "    print(\"Writing buffer.\")        \n",
+    "    cur.executemany(\n",
+    "        insert_embeddings, \n",
+    "        buffer\n",
+    "    )\n",
+    "    conn.commit()\n",
+    "    buffer = []"
    ]
   },
   {
@@ -73,50 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "from select_top_counts import select_top_counts\n",
     "\n",
-    "selected = {}\n",
-    "with open('../transformed/data/links.txt', 'r', encoding='utf-8', errors='replace') as file:\n",
-    "    for line in file:\n",
-    "        try:\n",
-    "            # Filter out hashtag pages\n",
-    "            if line[0] == '#':\n",
-    "                continue\n",
-    "\n",
-    "            # Filter out category pages\n",
-    "            skip = False\n",
-    "            for substring in ['Category:', 'File:', 'Wikipedia:']:\n",
-    "                if substring in line:\n",
-    "                    skip = True\n",
-    "            if skip:\n",
-    "                continue\n",
-    "                \n",
-    "            # Filter out aliases and sublinks\n",
-    "            for substring in ['#', '|']:\n",
-    "                if substring in line:\n",
-    "                    line = line.split(substring, 1)[0]\n",
-    "\n",
-    "            line = line.strip()\n",
-    "\n",
-    "            if line in selected:\n",
-    "                selected[line] += 1\n",
-    "            else:\n",
-    "                selected[line] = 1\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "\n",
-    "selected = pd.DataFrame(\n",
-    "    list(\n",
-    "        filter(\n",
-    "            lambda x: x['count'] >= 5,\n",
-    "            sorted(\n",
-    "                [{'lower_title': x.lower().strip(), 'count': y} for x, y in selected.items()],\n",
-    "                key=lambda x: x['count'],\n",
-    "                reverse=True\n",
-    "            )   \n",
-    "        )\n",
-    "    )\n",
-    ")\n",
+    "selected = select_top_counts()\n",
     "\n",
     "# Drop duplicates\n",
     "selected = selected.sort_values('count', ascending=False)\n",
@@ -200,11 +175,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>499179</th>\n",
-       "      <td>2177907</td>\n",
-       "      <td>Garde Mobile</td>\n",
-       "      <td>garde mobile</td>\n",
-       "      <td>Garde Mobile: The '''''Garde mobile''''' (\"Mob...</td>\n",
+       "      <th>1976</th>\n",
+       "      <td>1165127</td>\n",
+       "      <td>Hartford Dark Blues</td>\n",
+       "      <td>hartford dark blues</td>\n",
+       "      <td>Hartford Dark Blues: {| class=\"infobox vcard\" ...</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -212,11 +187,11 @@
        "</div>"
       ],
       "text/plain": [
-       "             id         title   lower_title  \\\n",
-       "499179  2177907  Garde Mobile  garde mobile   \n",
+       "           id                title          lower_title  \\\n",
+       "1976  1165127  Hartford Dark Blues  hartford dark blues   \n",
        "\n",
-       "                                               clean_text  count  \n",
-       "499179  Garde Mobile: The '''''Garde mobile''''' (\"Mob...      7  "
+       "                                             clean_text  count  \n",
+       "1976  Hartford Dark Blues: {| class=\"infobox vcard\" ...      7  "
       ]
      },
      "execution_count": 5,
