--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import json\n",
+    "\n",
+    "conn = sqlite3.Connection('stable/data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"select id, clean_title, count from articles\")\n",
+    "articles = cur.fetchall()\n",
+    "conn.close()\n",
+    "\n",
+    "with open('test.jsonl', 'a', encoding='utf-8') as file:\n",
+    "    for line in articles:\n",
+    "        file.write(json.dumps(line))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
