--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Connect counts and clean text."
+    "# Connect counts, clusters, and clean text."
    ]
   },
   {
@@ -122,7 +122,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean['id'] = clean['id'].astype(np.int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusters = []\n",
+    "with open('data/clusters.jsonl', 'r') as file:\n",
+    "    for line in file:\n",
+    "        clusters.append(json.loads(line))\n",
+    "clusters = pd.DataFrame(clusters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -130,19 +152,22 @@
      "output_type": "stream",
      "text": [
       "550751\n",
-      "550751\n"
+      "548767\n"
      ]
     }
    ],
    "source": [
     "print(len(clean))\n",
-    "clean = clean.merge(selected, on='lower_title')\n",
+    "clean = (clean\n",
+    "    .merge(selected, on='lower_title')\n",
+    "    .merge(clusters, on='id')\n",
+    ")\n",
     "print(len(clean))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -171,30 +196,32 @@
        "      <th>lower_title</th>\n",
        "      <th>clean_text</th>\n",
        "      <th>count</th>\n",
+       "      <th>cluster</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1976</th>\n",
-       "      <td>1165127</td>\n",
-       "      <td>Hartford Dark Blues</td>\n",
-       "      <td>hartford dark blues</td>\n",
-       "      <td>Hartford Dark Blues: {| class=\"infobox vcard\" ...</td>\n",
-       "      <td>7</td>\n",
+       "      <th>167315</th>\n",
+       "      <td>7814282</td>\n",
+       "      <td>Netze District</td>\n",
+       "      <td>netze district</td>\n",
+       "      <td>Netze District: The '''Netze District''' or ''...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>102</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           id                title          lower_title  \\\n",
-       "1976  1165127  Hartford Dark Blues  hartford dark blues   \n",
+       "             id           title     lower_title  \\\n",
+       "167315  7814282  Netze District  netze district   \n",
        "\n",
-       "                                             clean_text  count  \n",
-       "1976  Hartford Dark Blues: {| class=\"infobox vcard\" ...      7  "
+       "                                               clean_text  count  cluster  \n",
+       "167315  Netze District: The '''Netze District''' or ''...     10      102  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +251,25 @@
     "    print(e)\n",
     "finally:\n",
     "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(\"CREATE INDEX articles_idx_index ON articles(id)\")\n",
+    "conn.commit()\n",
+    "\n",
+    "cur.execute(\"CREATE INDEX embeddings_idx_index ON embeddings(id)\")\n",
+    "conn.commit()"
    ]
   }
  ],
