--- a/stable/embed.ipynb
+++ b/stable/embed.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "    del(df)\n",
     "\n",
-    "    with open('data/embeddings2.jsonl', 'a', encoding='utf-8') as file:\n",
+    "    with open('data/embeddings.jsonl', 'a', encoding='utf-8') as file:\n",
     "        for row in embeddings:\n",
     "            file.write(json.dumps(row) + '\\n')\n",
     "\n",
