--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,27 +201,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>167315</th>\n",
-       "      <td>7814282</td>\n",
-       "      <td>Netze District</td>\n",
-       "      <td>netze district</td>\n",
-       "      <td>Netze District: The '''Netze District''' or ''...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>102</td>\n",
+       "      <th>93506</th>\n",
+       "      <td>700793</td>\n",
+       "      <td>Complicated (Avril Lavigne song)</td>\n",
+       "      <td>complicated (avril lavigne song)</td>\n",
+       "      <td>Complicated (Avril Lavigne song): \"'''Complica...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>122</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             id           title     lower_title  \\\n",
-       "167315  7814282  Netze District  netze district   \n",
+       "           id                             title  \\\n",
+       "93506  700793  Complicated (Avril Lavigne song)   \n",
        "\n",
-       "                                               clean_text  count  cluster  \n",
-       "167315  Netze District: The '''Netze District''' or ''...     10      102  "
+       "                            lower_title  \\\n",
+       "93506  complicated (avril lavigne song)   \n",
+       "\n",
+       "                                              clean_text  count  cluster  \n",
+       "93506  Complicated (Avril Lavigne song): \"'''Complica...     14      122  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
