--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,6 +2,162 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 5195436, 1735785583.287105, '127.0.0.1'), (2, 5195436, 1735785583.9004815, '127.0.0.1'), (3, 13478, 1735785584.7886071, '127.0.0.1'), (4, 12255, 1735785585.2132974, '127.0.0.1'), (5, 34243, 1735785586.0122585, '127.0.0.1')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.Connection('stable/data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute('select * from guesses')\n",
+    "print(cur.fetchall())\n",
+    "\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>clean_title</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5198</th>\n",
+       "      <td>282404</td>\n",
+       "      <td>pema chödrön</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3825</th>\n",
+       "      <td>24125194</td>\n",
+       "      <td>maggie stiefvater</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5070</th>\n",
+       "      <td>2532006</td>\n",
+       "      <td>anahareo</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1710</th>\n",
+       "      <td>271821</td>\n",
+       "      <td>dervla murphy</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3164</th>\n",
+       "      <td>12517764</td>\n",
+       "      <td>charlotte elizabeth tonna</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5088</th>\n",
+       "      <td>7733852</td>\n",
+       "      <td>laura smith haviland</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5039</th>\n",
+       "      <td>2089943</td>\n",
+       "      <td>ruth stiles gannett</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4944</th>\n",
+       "      <td>1174344</td>\n",
+       "      <td>jean kilbourne</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3971</th>\n",
+       "      <td>31898279</td>\n",
+       "      <td>if women counted</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4914</th>\n",
+       "      <td>46838386</td>\n",
+       "      <td>alice goffman</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                clean_title  count\n",
+       "5198    282404               pema chödrön      5\n",
+       "3825  24125194          maggie stiefvater      6\n",
+       "5070   2532006                   anahareo      5\n",
+       "1710    271821              dervla murphy     10\n",
+       "3164  12517764  charlotte elizabeth tonna      7\n",
+       "5088   7733852       laura smith haviland      5\n",
+       "5039   2089943        ruth stiles gannett      5\n",
+       "4944   1174344             jean kilbourne      5\n",
+       "3971  31898279           if women counted      6\n",
+       "4914  46838386              alice goffman      5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.Connection('stable/data/data.db')\n",
+    "\n",
+    "df = pd.read_sql(\"select id, clean_title, count from articles where cluster is 262 order by count desc\", conn)\n",
+    "# df = pd.read_sql(\"select cluster, count(*) from articles group by cluster order by count(*) desc\", conn)\n",
+    "\n",
+    "conn.close()\n",
+    "\n",
+    "# df.head(10)\n",
+    "df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
