--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -274,6 +274,47 @@
     "cur.execute(\"CREATE INDEX embeddings_idx_index ON embeddings(id)\")\n",
     "conn.commit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(\"\"\"\n",
+    "    create table ping (\n",
+    "        id INTEGER PRIMARY KEY,\n",
+    "        user_agent TEXT,\n",
+    "        referer TEXT,\n",
+    "        ip TEXT,\n",
+    "        timestamp REAL,\n",
+    "        width INTEGER,\n",
+    "        height INTEGER,\n",
+    "        inner_width INTEGER,\n",
+    "        inner_height INTEGER,\n",
+    "        pixelRatio REAL\n",
+    "    )\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
+    "cur.execute(\"\"\"\n",
+    "    create table guesses (\n",
+    "        id INTEGER PRIMARY KEY,\n",
+    "        guess_id INTEGER,\n",
+    "        timestamp REAL,\n",
+    "        ip TEXT\n",
+    "    )\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
